src/test/ui/borrowck/two-phase-sneaky.stderr
error[E0499]: cannot borrow `v` as mutable more than once at a time
  --> $DIR/two-phase-sneaky.rs:12:9
   |
LL |     v[0].push_str({
   |     - first mutable borrow occurs here
LL | 
LL |         v.push(format!("foo"));
   |         ^ second mutable borrow occurs here
...
LL |     });
   |      - first borrow ends here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0499`.
